Changed the 64 depth mat to 32 depth mat

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 #################
+## Data Files
+#################
+
+*.jpg
+*.png
+*.bmp
+*.jpeg
+
+
+#################
 ## Eclipse
 #################
 
