updated. The same performance of CWS has been achieved.

--- a/BMS/makefile
+++ b/BMS/makefile
@@ -2,8 +2,8 @@
 SRCDIR=./src
 INCLDIR=./src $(HOME)/local/include
 LIBDIR=$(HOME)/local/lib
-LIBS=libopencv_core libopencv_highgui libopencv_imgproc
-CFLAGS=-Wall -O2 $(patsubst %,-I%,$(INCLDIR))
+LIBS=opencv_core opencv_highgui opencv_imgproc
+CFLAGS=-Wall -O2 -fopenmp $(patsubst %,-I%,$(INCLDIR))
 LDFLAGS=$(patsubst %,-L%,$(LIBDIR)) $(patsubst %,-l%,$(LIBS))
 SOURCES=main.cpp BMS.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
